new ref (schuurman2015)

--- a/book.bib
+++ b/book.bib
@@ -1339,6 +1339,17 @@ year = {1999}
   year = {2012}
 }
 
+
+@article{Schuurman2015,
+  title={Incorporating measurement error in n= 1 psychological autoregressive modeling},
+  author={Schuurman, No{\'e}mi Katalin and Houtveen, Jan H and Hamaker, Ellen L},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={1038},
+  year={2015},
+  publisher={Frontiers}
+}
+
 @article{VanHeest2014,
   title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
   author = {van Hees, Vincent T and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
